--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openai/agents": "^0.3.4",
     "next": "14.2.5",
     "openai": "^4.47.1",
     "react": "^18.3.1",
